<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_alarm_clear</name>
  <version>1.0.0</version>
  <description>Dobot Magician alarm clearing service.</description>
  <author email="01168917@pw.edu.pl">Filip Szyszko</author>
  <maintainer email="01168917@pw.edu.pl">Filip Szyszko</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>dobot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
