<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_homing</name>
  <version>1.0.0</version>
  <description>Dobot Magician homing procedure service.</description>
  <author email="kan.jan@wp.pl">Jan Kaniuka</author>
  <maintainer email="kan.jan@wp.pl">Jan Kaniuka</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>dobot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
